--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -97,6 +97,7 @@ web_modules/
 .env.development.local
 .env.test.local
 .env.production.local
+.env.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
